app/assets/css/app.css
/* app css stylesheet */

/***************
 * GENERAL
 ***************
 */
html, body {
  width: 100%;
  height: 100%;
  background: #1E1E24;
  font-size: 14px;
  font-family: "Open Sans";
  font-weight: 300;
}

#particles canvas {
  opacity: 1;
  transition: 0.4s all ease;
}

@media (max-width: 40em) {
  html, body {
    font-size: 13px;
  }
  #particles canvas {
    visibility: hidden;
    display: none;
  }
}

@media (min-width: 120.063em) {
  html, body {
    font-size: 18px;
  }
}

body {
  font-family: "Open Sans", "Helvetica", sans-serif;
  margin: 0;
  padding: 0;
}

section {
  overflow: hidden;
}

section.page-section {
  padding: 70px 0;
}

li {
  list-style: none;
}

::-moz-selection {
  color: #EDECEA;
  background: #1E1E24;
}

::selection {
  color: #EDECEA;
  background: #1E1E24;
}

.full-width-row {
  overflow: hidden;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  max-width: initial;
}

.transition {
  transition: 0.2s all ease-in;
}

.alert {
  padding: 25px;
  box-shadow: 10px 10px 0px rgba(30, 30, 36, 0.15);
  background: #EDECEA;
  color: #EDECEA;
  margin: 0 0 35px 0;
  font-variant: small-caps;
  text-transform: lowercase;
  font-weight: 600;
  font-family: "Open Sans", "Helvetica", sans-serif;
  font-size: 1.2em;
  background: white;
}

.alert.success {
  color: #1E1E24;
}
.alert.success:before {
  content: "\f00c  ";
  font-family: "FontAwesome";
}

.alert.error {
  color: #C8242C;
}
.alert.error:before {
  content: "\f00d  ";
  font-family: "FontAwesome";
}

h1, h5 {
  color: #EDECEA;
  text-transform: uppercase;
  font-variant: small-caps;
  font-weight: 300;
  font-family: "Open Sans";
}

h5 {
  font-size: 1.2rem;
  letter-spacing: 0.95rem;
  padding-left: 10px;
}

.js .js-alert {
  display: none;
  visibility: hidden;
}

.browsehappy, .no-js .js-alert {
  display: block;
  width: 100%;
  padding: 25px;
  background: #EDECEA;
  color: #1E1E24;
  z-index: 9999;
  position: fixed;
  text-align: center;
}
.browsehappy a, .no-js .js-alert a {
  color: #C8242C;
}

.no-js #loader {
  z-index: 9;
}


/***************
 * PAGES ANIMATIONS
 ***************
 */
.at-view-fade-in.ng-enter #particles canvas,
.at-view-fade-out.ng-leave #particles canvas {
  opacity: 0;
}
.at-view-fade-out.ng-leave #particles canvas {
  visibility: hidden;
  display: none;
}

.at-view-fade-in.ng-enter {
  -webkit-transition-property: opacity;
  -moz-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.3s;
  -moz-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  opacity: 0;
}

.at-view-fade-in.ng-enter-active {
  opacity: 1;
}

.at-view-fade-out.ng-leave {
  -webkit-transition-property: opacity;
  -moz-transition-property: opacity;
  -o-transition-property: opacity;
  transition-property: opacity;
  -webkit-transition-duration: 0.3s;
  -moz-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  opacity: 1;
}

.at-view-fade-out.ng-leave-active {
  opacity: 0;
}


/***************
 * SCROLLBARS
 ***************
 */
::-webkit-scrollbar-track
{
  box-shadow: none!important;
  border: none;
  background-color: #EDECEA!important;
}

::-webkit-scrollbar
{
  width: 4px!important;
  background-color: #EDECEA!important;
  box-shadow: none!important;
  border: none;
}

::-webkit-scrollbar-thumb
{
  background-color: #1E1E24!important;
  border: none!important;
  box-shadow: none!important;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #B32128!important;
}


/***************
 * HOME HEADER
 ***************
 */
header#home {
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  text-align: center;
  background: url('../img/stardust.png');
  background-repeat: repeat-x, repeat-y;
}

header#home.secondary-header {
  min-height: 250px;
  max-height: 250px;
  overflow: hidden;
}

header#home .row {
  z-index: 999;
}

header#home h1 {
  word-wrap: break-word;
  font-size: 5rem;
  line-height: 5.5rem;
  letter-spacing: 1rem;
}

header#home.secondary-header h1 {
  font-size: 2em;
}

header#home .bg-wrapper {
  background: url('../img/smoke.png');
  background-position: center -110px;
  background-size: 70em;
  opacity: 0.9;
  z-index: 0;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
header#home.secondary-header .bg-wrapper {
  max-height: 250px;
  background-size: cover;
  background-position: center;
}

@media (min-width: 120.063em) {
  header#home .bg-wrapper {
    background-size: 100%;
  }
}

header#home h1 strong {
  font-weight: 600;
}


/***************
 * MENU
 ***************
 */
li.divider {
  clear: both;
  margin: 10px 0;
}

li.header {
  padding: 20px 40px;
  background: #353535;
  text-align: left;
  color: #EDECEA;
  text-transform: lowercase;
  font-variant: small-caps;
  font-weight: bold;
}

#menu {
  color: #EDECEA;
  font-size: 1.8rem;
  position: fixed;
  text-align: right;
  /* margin-top: 40px; */
  margin-right: 2rem;
  left: 0;
  bottom: 20px;
  z-index: 99999;
}

#nav_list i {
  text-shadow: 4px 4px rgba(20, 20, 20, 0.3);
}

.hamburger:hover, .hamburger:focus, #nav_list.active i {
  cursor: pointer;
  color: #282828;
  text-shadow: 4px 4px transparent;
}

#nav_list.active i {
  cursor: default;
}

.pushmenu {
  background: #282828;
  font-family: "Open Sans", "Helvetica", sans-serif;
  width: 240px;
  height: 100%;
  top: 0;
  z-index: 10000;
  position:fixed;
  border-right: 1px solid #353535;
}
.pushmenu ul {
  margin: 0;
}
.pushmenu a {
  -webkit-transition: all 0.1s ease-in;
  -moz-transition: all 0.1s ease-in;
  transition: all 0.1s ease-in;
  font-weight: 600;
  display: block;
  color: #888;
  text-align: left;
  text-transform: uppercase;
  font-variant: small-caps;
  text-decoration: none;
  padding: 1.3rem 0;
  padding-left: 40px;
  font-size: 0.7rem;
  border-bottom: 1px solid #353535;
}
/* ... */

